--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="js/main.js"></script>
 </head>
 <body>
-    
-</body>
+    <header>X's & O's</header>
+    <h2></h2>
+    <section class="grid">
+                <div class="cell-1"></div>
+                <div class="cell-2"></div>
+                <div class="cell-3"></div>
+                <div class="cell-4"></div>
+                <div class="cell-5"></div>
+                <div class="cell-6"></div>
+                <div class="cell-7"></div>
+                <div class="cell-8"></div>
+                <div class="cell-9"></div>
+        </section>  
+        <button>Reset</button>
+    </body>
 </html>
